<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".AboutUs">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="243dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgVishrant"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVishrant"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_vertical"
                android:gravity="bottom"
                android:text="@string/txtVishrant"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/txtDes1"
                tools:text="RK University" />

            <TextView
                android:id="@+id/textV"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:text="@string/textV" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="243dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imgRiddhi"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ridhi" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRiddhi"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_vertical"
                android:gravity="bottom"
                android:text="@string/txtRiddhi"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/txtDes3"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="RK University" />

            <TextView
                android:id="@+id/textR"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:text="@string/textR" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="243dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/devendra" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDevendra"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_vertical"
                android:gravity="bottom"
                android:text="@string/txtDevendra"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/txtDes2"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="RK University" />

            <TextView
                android:id="@+id/textD"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:text="@string/textD" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>