<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e88e5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="135dp"
        android:layout_height="208dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/loginicon" />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/txtUsername"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editUser"
        android:layout_alignBottom="@id/editUser"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/txtPass"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUser" />

    <Button
        android:id="@+id/submit"
        android:text="@string/btnLogin"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorAccent"
        android:drawablePadding="10dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPass"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>